    * SyntaxDocument getIndexOf methods deprecated, use getMatchers instead
    * Added Line Numbering to Java
    * Added CaretMonitor Class
    * Merged Find And Replace dialogs into one.
    * Created SyntaxComponent interface and have all UI components implement
      that interface.  DefaultSyntaxKit will use config.properties class to
      dynamically install these components.
    * Added Right Marigin option and Single Color Selection Options
    * Added Python, C and C++ Support
    * Added Ruby Syntax Support
    * Fixed Issue 37 (NPE for LineNumbersRuler)
    * Fixed Issue 39 (Highlighting Tokens overrides selection highlights)
    * Fixed some JavaDoc comments.
    * Fixed Line Numbers being displayed for the height of the editor and now
      just for the actual available lines.
Version 0.9.2:
    * Fixing Java Indentation and Un-Indentattion Actions
    * Added and used (in the Tester) clearUndoes on the SyntaxDocument
    * Added Basic JFlex Syntax
    * Added getContentTypes to DefaultSyntaxKit to get all registered
      ContentTypes.  This is now also used in the SyntaxTester instead of
      hardcoding the types.
    * Cleanup and optimization of Lexers by removing duplicate Java Code
      (replaced with Regex OR)
    * Removed calls to deprecated calls in SyntaxView
    * Modified the SyntaxDOcument to override the fireXXX methods and parse
      the document at that time instead of overriding the inserUpdate method.
      This fixes issue 24.
    * Added Groovy GString expression highlights
    * Removed getLanguages method from Lexer interface and implementations.
    * Added WARNING and ERROR TokenTypes and added their default styles.
    * Moved Keymaps and install methods to SyntaxKits instead of the Lexers
    * Removed deprecated methods from SyntaxActions class
    * Split SyntaxActions into new package and moved inner classes to the new
      package
    * Added Token HighLighter to Java
    * Added Pairs Highlighter to Java